--- a/laukums.html
+++ b/laukums.html
@@ -110,7 +110,7 @@ and open the template in the editor.
                 jauns[i]=tmp;
                 console.log(jauns[i]);
             }
-            //console.log(jauns.length);
+            console.log(jauns.length);
     }
     var a,a1,b,b1;
     function sajaucMasivu(){
