--- a/laukums.html
+++ b/laukums.html
@@ -50,8 +50,11 @@ and open the template in the editor.
                     x.className = 'button';
                     //console.log(jauns[m+k]);
                     if(jauns[m+k].indexOf(".")>=0){
-                       x.setAttribute("style","background-image: url("+jauns[m+k]+")"); 
+                        id=pogab;
+                        x.setAttribute("style","background-image: url("+jauns[m+k]+")"); 
+                      
                     }else{
+                        id=poga;
                          x.innerHTML=jauns[m+k];
                     }
                      //var t = document.createTextNode("");
