--- a/laukums.html
+++ b/laukums.html
@@ -53,8 +53,8 @@ and open the template in the editor.
                         document.getElementById("pogab").onclick = function() {maina()};
                       }else{
                         x.innerHTML=jauns[m+k];
-                        x.setAttribute("id", "poga");
-                        document.getElementById("poga").onclick = function() {mainaBildi()};
+                        //x.setAttribute("id", "poga");
+                        //document.getElementById("poga").onclick = function() {mainaBildi()};
 
                     }
                      //var t = document.createTextNode("");
