--- a/laukums.html
+++ b/laukums.html
@@ -71,7 +71,7 @@ and open the template in the editor.
                         let r= x.id.substring(5);
                     x.setAttribute("style","background-image: url("+jauns[r]+")");
                     }else{
-                        let r= x.id.substring(5);
+                        let v= x.id.substring(5);
                          x.innerHTML=jauns[r];
                     }
                 }    
