--- a/laukums.html
+++ b/laukums.html
@@ -73,6 +73,7 @@ and open the template in the editor.
                     }else{
                         let v= x.id.substring(5);
                          x.innerHTML=jauns[r];
+                         x.setAttribute("style", "color:white");
                     }
                 }    
                 y.appendChild(x);
