--- a/laukums.html
+++ b/laukums.html
@@ -72,7 +72,7 @@ and open the template in the editor.
                     x.setAttribute("style","background-image: url("+jauns[r]+")");
                     }else{
                         let v= x.id.substring(5);
-                         x.innerHTML=jauns[r];
+                         x.innerHTML=jauns[v];
                          x.setAttribute("style", "color:white");
                     }
                 }    
