--- a/laukums.html
+++ b/laukums.html
@@ -78,7 +78,7 @@ and open the template in the editor.
                          x.setAttribute("style", "color:white");
                     }
                     pip++;
-                    console.log(k);
+                    console.log(pip);
                 }    
                 y.appendChild(x);
                 }
