--- a/laukums.html
+++ b/laukums.html
@@ -30,6 +30,7 @@ and open the template in the editor.
     <script>
     var jauns=[];
     var masivs = [];
+    var nan=quantity.value;
         function izveidoLaukumu(n){
             veidoMasivu();
             sajaucMasivu();
@@ -83,7 +84,7 @@ and open the template in the editor.
                 y.appendChild(x);
                 }
                 p.appendChild(y);
-                k=k+n;
+                k=k+nan;
             } 
             document.body.appendChild(p);
         }
