--- a/laukums.html
+++ b/laukums.html
@@ -85,7 +85,7 @@ and open the template in the editor.
                     }
                     
                     pip++;
-                    console.log(pip);
+                    //console.log(pip);
                 }    
                 y.appendChild(x);
                 }
