--- a/laukums.html
+++ b/laukums.html
@@ -98,7 +98,7 @@ and open the template in the editor.
         function matrixIndexed(masivs, name) {
             var rinda;
             var kolonna;
-            for (rinda = 0; rinda < details.length; ++rinda) { 
+            for (rinda = 0; rinda < masivs.length; ++rinda) { 
                 const nsDetails = masivs[rinda];
                 for (kolonna = 0; kolonna < nsDetails.length; ++kolonna) {
                     const tempObject = nsDetails[kolonna];
