--- a/laukums.html
+++ b/laukums.html
@@ -103,7 +103,7 @@ and open the template in the editor.
                 for (kolonna = 0; kolonna < nsDetails.length; ++kolonna) {
                     const tempObject = nsDetails[kolonna];
                     if (tempObject === name) {  
-                        return { r, c};
+                        return { rinda, kolonna};
                     }
                 }
             }
