--- a/laukums.html
+++ b/laukums.html
@@ -78,8 +78,8 @@ and open the template in the editor.
                          x.setAttribute("style", "color:white");
                     } 
                     if(pip%2!=0){
-                         var index = masivs.findIndex(x=>x.includes(jauns[rr]))
-                         console.log(index);
+                        var {rinda, kolonna } = matrixIndexed(masivs, jauns[rr]);
+                        console.log(rinda, kolonna);
                     }else{
                         var {rinda, kolonna } = matrixIndexed(masivs, jauns[rr]);
                         console.log(rinda, kolonna);
