--- a/laukums.html
+++ b/laukums.html
@@ -50,52 +50,41 @@ and open the template in the editor.
                 for (var m=0; m<n;m++){
                     let x = document.createElement("BUTTON");
                     x.className = 'button';
-                    //console.log(jauns[m+k]);
-                    
                     if(jauns[m+k].indexOf(".")>=0){
                         x.setAttribute("id", "bpoga"+(m+k));
                         x.setAttribute("style","background-image: url("+jauns[m+k]+")"); 
                         x.setAttribute("style", "background-color:#2f2f2f");
-                        //document.getElementById("pagab").addEventListener("click", maina());
                     }else{
                         x.setAttribute("id", "tpoga"+(m+k));
                         x.innerHTML=jauns[m+k];
                         x.setAttribute("style", "color:#2f2f2f");
-                        //document.getElementById("poga").onclick = function() {mainaBildi()};
-                
                     }
                      //var t = document.createTextNode("");
                     //x.appendChild(t);
                 var cipars;   
-                var d;
-                var kas;
+                let d;
                 x.onclick=()=>{
                     console.log(x.id);
                     var rr= x.id.substring(5);
                     if(x.id.indexOf("b")>=0){
                     x.setAttribute("style","background-image: url("+jauns[rr]+")");
+                    setTimeout(function(){x.setAttribute("style","background-color:#2f2f2f");},3000);
                     }else{
-                        x.innerHTML=jauns[rr];
                         x.setAttribute("style", "color:white");
+                        x.innerHTML=jauns[rr];
+                        setTimeout(function(){ x.setAttribute("style", "color:#2f2f2f");},3000);
                     } 
                     if(pip%2!=0){
                         var {rinda, kolonna } = matrixIndexed(masivs, jauns[rr]);
                         console.log(rinda, kolonna);
                         cipars = rinda;
-                        kas=jauns[rr];
-                        d=x.id;
-                    }else{
+                        d=x;
+                   }else{
                         var {rinda, kolonna } = matrixIndexed(masivs, jauns[rr]);
                         console.log(rinda, kolonna);
                         if(cipars!=rinda){
                             if(x.id.indexOf("b")>=0){
                                 setTimeout(function(){ x.setAttribute("style", "background-color:#2f2f2f");}, 3000);
-                                if(d.id.indexOf("b")>=0){
-                                    setTimeout(function(){ d.setAttribute("style", "background-color:#2f2f2f");}, 3000);
-                                }else{
-                                    x.setAttribute("style", "color:#2f2f2f");
-                                    setTimeout(function(){ d.innerHTML=kas;}, 3000);
-                                } 
                             }else{
                                 x.setAttribute("style", "color:#2f2f2f");
                                 setTimeout(function(){ x.innerHTML=jauns[rr];}, 3000);
