--- a/laukums.html
+++ b/laukums.html
@@ -65,6 +65,7 @@ and open the template in the editor.
                 let d;
                 let kas;
                 x.onclick=()=>{
+                    
                     console.log(x.id);
                     var rr= x.id.substring(5);
                     if(x.id.indexOf("b")>=0){
@@ -76,15 +77,14 @@ and open the template in the editor.
                         setTimeout(function(){ x.setAttribute("style", "color:#2f2f2f");},2000);
                     } 
                     if(pip%2!=0){
-                        var {rinda, kolonna } = matrixIndexed(masivs, jauns[rr]);
-                        console.log(rinda, kolonna);
-                        cipars = rinda;
-                        d=x;
-                        kas=jauns[rr];
+                        let {rinda, kolonna} = matrixIndexed(masivs, jauns[rr]);
+                        console.log( rinda, kolonna);
+                        cipars = kolonna;
+                        let idk = x.id.substring();
                    }else{
-                        var {rinda, kolonna } = matrixIndexed(masivs, jauns[rr]);
+                        let {rinda, kolonna} = matrixIndexed(masivs, jauns[rr]);
                         console.log(rinda, kolonna);
-                        if(cipars!=rinda){
+                        if(cipars!=kolonna){
                             if(x.id.indexOf("b")>=0){
                                 setTimeout(function(){ x.setAttribute("style", "background-color:#2f2f2f");}, 3000);
                             }else{
@@ -92,13 +92,13 @@ and open the template in the editor.
                                 setTimeout(function(){ x.innerHTML=jauns[rr];}, 2000);
                             }
                         }else{
-                            if(d.id.indexOf("b")>=0){
-                                x.setAttribute("style", "background-image: url("+jauns[rr]+")");
-                                d.setAttribute("style", "background-image: url("+jauns[rr]+")");
+                            if(x.id.indexOf("b")>=0){
+                                x.setAttribute("style", "background-image: url("+masivs[kolonna][0]+")");
+                                document.getElementById("idk").innerHTML = masivs[kolonna][1];
                             }else{
-                                d.setAttribute("style", "color:white");
-                                x.innerHTML=jauns[rr];
-                                d.innerHTML=kas;
+                                x.setAttribute("style", "color:white");
+                                x.innerHTML=masivs[kolonna][1];
+                                document.getElementById("idk").setAtribute("style", "background-image: url("+masivs[kolonna][0]+")");
                             }
                         }
                          
