--- a/laukums.html
+++ b/laukums.html
@@ -61,6 +61,7 @@ and open the template in the editor.
                     }
             var cipars;   
             let idk;
+            let mans, nan;
             x.onclick=()=>{
                 console.log(x.id);
                 var rr= x.id.substring(5);
@@ -84,18 +85,18 @@ and open the template in the editor.
                             if(x.id.indexOf("b")>=0){
                                 setTimeout(function(){ x.setAttribute("style", "background-color:#2f2f2f");}, 3000);
                             }else{
-                                x.setAttribute("style", "color:#2f2f2f");
+                                x.setAttribute("style", "color:white");
                                 setTimeout(function(){ x.innerHTML=jauns[rr];}, 2000);
                             }
                         }else{
                             if(x.id.indexOf("b")>=0){
                                 x.setAttribute("style", "background-image: url("+masivs[kolonna][0]+")");
-                                let mans = document.getElementById(idk);
+                                mans = document.getElementById(idk);
                                 mans.innerHTML = masivs[kolonna][1];
                             }else{
                                 x.setAttribute("style", "color:white");
                                 x.innerHTML=masivs[kolonna][1];
-                                let nan = document.getElementById(idk);
+                                nan = document.getElementById(idk);
                                 nan.setAtribute("style", "background-image: url("+masivs[kolonna][0]+")");
                             }
                         }
