--- a/laukums.html
+++ b/laukums.html
@@ -30,6 +30,7 @@ and open the template in the editor.
     <script>
     var jauns=[];
     var masivs = [];
+    var bilde, teksts; 
         function izveidoLaukumu(n){
             veidoMasivu();
             sajaucMasivu();
@@ -59,7 +60,7 @@ and open the template in the editor.
                         x.innerHTML=jauns[m+k];
                         x.setAttribute("style", "color:#2f2f2f");
                     }
-            var cipars;   
+            var cipars;
             let idk;
             let mans, nan;
             x.onclick=()=>{
@@ -67,37 +68,41 @@ and open the template in the editor.
                 var rr= x.id.substring(5);
                 if(x.id.indexOf("b")>=0){
                 x.setAttribute("style","background-image: url("+jauns[rr]+")");
-                setTimeout(function(){x.setAttribute("style","background-color:#2f2f2f");},2000);
+                bilde = setTimeout(function(){x.setAttribute("style","background-color:#2f2f2f");},2000);
                 }else{
                     x.setAttribute("style", "color:white");
                     x.innerHTML=jauns[rr];
-                    setTimeout(function(){ x.setAttribute("style", "color:#2f2f2f");},2000);
+                    teksts = setTimeout(function(){ x.setAttribute("style", "color:#2f2f2f");},2000);
                 } 
                     if(pip%2==0){
                         let {rinda, kolonna} = matrixIndexed(masivs, jauns[rr]);
                         console.log( rinda, kolonna);
-                        cipars = kolonna;
+                        cipars = rinda;
                         idk = 'x.id.substring()';
+                        mans = document.getElementById(idk);
+                        nan = document.getElementById(idk);
                    }else{
                         let {rinda, kolonna} = matrixIndexed(masivs, jauns[rr]);
                         console.log(rinda, kolonna);
-                        if(cipars!=kolonna){
+                        if(cipars!=rinda){
                             if(x.id.indexOf("b")>=0){
                                 setTimeout(function(){ x.setAttribute("style", "background-color:#2f2f2f");}, 3000);
                             }else{
                                 x.setAttribute("style", "color:white");
-                                setTimeout(function(){ x.innerHTML=jauns[rr];}, 2000);
+                                setTimeout(function(){ x.innerHTML=jauns[rr];}, 1000);
                             }
                         }else{
                             if(x.id.indexOf("b")>=0){
-                                x.setAttribute("style", "background-image: url("+masivs[kolonna][0]+")");
-                                mans = document.getElementById(idk);
-                                mans.innerHTML = masivs[kolonna][1];
+                                stopText();
+                                x.setAttribute("style", "background-image: url("+masivs[rinda][0]+")");
+                                //mans = document.getElementById(idk);
+                                //mans.innerHTML = masivs[rinda][1];
                             }else{
+                                stopBilde();
                                 x.setAttribute("style", "color:white");
-                                x.innerHTML=masivs[kolonna][1];
-                                nan = document.getElementById(idk);
-                                nan.setAtribute("style", "background-image: url("+masivs[kolonna][0]+")");
+                                x.innerHTML=masivs[rinda][1];
+                                //nan = document.getElementById(idk);
+                                //nan.setAtribute("style", "background-image: url("+masivs[rinda][0]+")");
                             }
                         }
                     }
@@ -110,6 +115,13 @@ and open the template in the editor.
             } 
             document.body.appendChild(p);
         }
+        
+    function stopText() {
+        clearTimeout(bilde);
+    }
+    function stopBilde() {
+        clearTimeout(teksts);
+    }
         function matrixIndexed(masivs, name) {
             var rinda;
             var kolonna;
