--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ and open the template in the editor.
 <a id="div">
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">HTML &lt;div&gt; tags</h3>
-  <img src="images/div..png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
+  <img src="img/div..png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
   <p>Tags &lt;div&gt; definē HTML dokumenta sadalījumu vai sadaļu. To izmanto kā tagu, ko piepilda CSS un manipulē JavaScript. Tag div var ievietot jebkāda veida saturu.</p>
 </div>
 
@@ -57,24 +57,13 @@ and open the template in the editor.
 <a id="span">
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">HTML &lt;span&gt; tags</h3>
- <img src="images/span.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
+ <img src="img/span.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1500" height="350">
   <p>Tags &lt;span&gt;  izmanto, lai iezīmētu teksta daļu vai dokumenta daļu. Tagu &lt;span&gt; CSS var viegli noformēt vai JavaScript, izmantojot klases vai id atribūtu. Tags span ir līdzīgs elementam div, bet div ir bloka līmeņa elements un span ir iekļauts elements.</p>
   <!--<a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon glyphicon-search"></span> Search
   </a>-->
 </div>
-<script>
-    window.onscroll = function() {myFunction();};
-    var navbar = document.getElementById("myNavbar");
-    var sticky = navbar.offsetHeight;
-    function myFunction(){
-        if (window.pageYOffset >= sticky){
-            navbar.classList.add("sticky");
-        }else{
-            navbar.classList.remove("sticky");
-        }
-    }
-</script>
+
 <!-- Third Container (Grid) -->
 <a id="video">
 <div class="container-fluid bg-3 text-center">    
@@ -82,32 +71,32 @@ and open the template in the editor.
   <p>Tagu video izmanto, lai ievietotu video saturu dokumentā, piemēram, filmas klipā vai citās video straumēs. Teksts starp tagiem video un video tiks parādīts tikai tajās pārlūkprogrammās, kas neatbalsta elementu video. HTML formātā ir trīs atbalstīti video formāti: MP4, WebM un OGG.</p>
   <br>
   <video width="320" height="240" controls>
-  <source src="images/rubija.mp4" type="video/mp4">
+  <source src="img/rubija.mp4" type="video/mp4">
 </video><br>
 <br>
-  <img src="images/video.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1000" height="200">
+  <img src="img/video.png" class="img-responsive margin" style="display:inline" alt="tags div" width="1000" height="200">
   <div class="row">
     <div class="col-sm-4">
       <p> </p>
       <p>CSS ANIMATIONS</p><br>
       <div class="myDiv"><span style="color:white">Hover on me</span></div><br>
       <p>CSS ļauj animēt HTML elementus, neizmantojot JavaScript vai Flash! Animācija ļauj elementam pakāpeniski mainīties no viena stila uz otru. </p>
-      <img src="images/hover.png" class="img-responsive margin" style="width:80%" alt="Image">
+      <img src="img/hover.png" class="img-responsive margin" style="width:80%" alt="Image">
     </div>
       <div class="col-sm-4"> 
       <p> </p> 
       <p>CSS STYLING IMAGES - ROUNDED</p><br>
       <p>CSS var veidot arī apaļus rāmjus, rāmjus ārus attēla - kvadrātiskus. Un vēl dažādas citas funkcijas. Vairāk : <a href="https://www.w3schools.com/css/css3_images.asp">www.w3schools.com</a></p>
       <div></div>
-      <img src="images/rubija1.jpg" class="img-responsive img-rounded margin" style="width:100%" alt="Rūbija">
-      <img src="images/image.png" class="img-responsive margin" style="width:100%" alt="kods">
+      <img src="img/rubija1.jpg" class="img-responsive img-rounded margin" style="width:100%" alt="Rūbija">
+      <img src="img/image.png" class="img-responsive margin" style="width:100%" alt="kods">
     </div>
       <div class="col-sm-4"> 
       <p> </p>
       <p>CSS GRADIENT</p><br>
       <div id="grad1"><span style="color:white">Gradients apvieno divas krāsas, redzama pakāpeniska to pāreja.</span></div>
       <br>
-      <img src="images/gradient.png" class="img-responsive margin" style="width:100%" alt="kods">
+      <img src="img/gradient.png" class="img-responsive margin" style="width:100%" alt="kods">
     </div>
   </div>
 </div>
