--- a/laukums.html
+++ b/laukums.html
@@ -29,9 +29,9 @@ and open the template in the editor.
             sajaucMasivu();
             jaunsMasivs(n);
             sajaucJauns();
-            var i;
-            var k=0;
-            var pip=0;
+            let i;
+            let k=0;
+            let pip=0;
             if(document.getElementById("laukums")!= null){
                 document.body.removeChild(document.getElementById("laukums"));
             }
