--- a/laukums.html
+++ b/laukums.html
@@ -39,7 +39,7 @@ and open the template in the editor.
             p.setAttribute("id","laukums");    
             for (i=0; i<n;i++){
                 let y = document.createElement("div");
-                for (var m=0; m<n;m++){
+                for (let m=0; m<n;m++){
                     let x = document.createElement("BUTTON");
                     x.className = 'button';
                     if(jauns[m+k].indexOf(".")>=0){
