--- a/laukums.html
+++ b/laukums.html
@@ -186,9 +186,10 @@ function veidoMasivu(){
             for(let s=0;s<2;s++){
                 a=masivs[r][s];
             jauns.push(a);
+            console.log(a);
             }
         }
-        //console.log(jauns.length);
+        console.log("viss");
     }
         
         function sajaucJauns(){
